fix(dialog): dialog footer words position when align set #INFR-860

--- a/src/dialog/styles/dialog.scss
+++ b/src/dialog/styles/dialog.scss
@@ -97,18 +97,23 @@
     &.dialog-footer-actions-align-left {
         flex-direction: row;
         .dialog-footer-description {
+            text-align: right;
             margin-left: 30px;
         }
     }
     &.dialog-footer-actions-align-center {
         justify-content: center;
         .dialog-footer-description {
+            flex: none;
             margin-left: 30px;
+            max-width: 410px;
+            text-align: left;
         }
     }
     &.dialog-footer-actions-align-right {
         flex-direction: row-reverse;
         .dialog-footer-description {
+            text-align: left;
             margin-right: 30px;
         }
     }
